--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "devstart": "nodemon ./bin/www",
-    "runserver": "DEBUG=express-locallibrary-tutorial:* npm run devstart"
+    "runserver": "DEBUG=app:* npm run devstart"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
