--- a/app/package.json
+++ b/app/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "date-and-time": "^0.13.1",
     "debug": "~2.6.9",
     "ejs": "^3.1.3",
     "express": "~4.16.1",
+    "express-validator": "^6.6.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mongoose": "^5.9.20",
